[package]
name = "m5-stack-s3-led"
version = "0.1.0"
authors = ["unvsacrs <toa16659_n0zak1@au.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[dependencies]
log = {  workspace = true }
esp-idf-sys = { workspace = true}
esp-idf-hal = { workspace = true }
esp-idf-svc = { workspace = true }
embedded-svc = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }

smart-leds = "*"
ws2812-esp32-rmt-driver = "*"

[build-dependencies]
embuild = "0.31.2"
